# expert_belt

./: .gitignore  LICENSE  compose-dev.yaml  pyproject.toml  requirements.txt  run.sh
.devcontainer/: devcontainer.json
.do/: app.yaml
app/: cron.py  settings.py  urls.py
expert_belt_api/: admin.py  apps.py  serializers.py  urls.py  views.py
expert_belt_api/migrations/: 0001_initial.py  0002_format_tournament_game_userprofile_record_phase_and_more.py
expert_belt_api/models/: Format.py  Match.py  Organizer.py  Phase.py  Record.py  Tournament.py  UserProfile.py  __init__.py
expert_belt_api/scripts/: load.py
frontend/: .gitignore  package.json  schema.yml
frontend/public/: manifest.json
frontend/src/: App.tsx  Routing.tsx
frontend/src/API/: index.ts
frontend/src/API/core/: OpenAPI.ts  request.ts
frontend/src/API/models/: Format.ts  FormatRequest.ts  GameEnum.ts  Group.ts  GroupRequest.ts  ModeEnum.ts  Organizer.ts  OrganizerRequest.ts  PaginatedFormatList.ts  PaginatedGroupList.ts  PaginatedOrganizerList.ts  PaginatedPhaseList.ts  PaginatedRecordList.ts  PaginatedTournamentList.ts  PaginatedUserList.ts  PatchedFormatRequest.ts  PatchedGroupRequest.ts  PatchedOrganizerRequest.ts  PatchedPhaseRequest.ts  PatchedRecordRequest.ts  PatchedTournamentRequest.ts  PatchedUserRequest.ts  Phase.ts  PhaseRequest.ts  Record.ts  RecordRequest.ts  Tournament.ts  TournamentRecord.ts  TournamentRecordRequest.ts  TournamentRequest.ts  User.ts  UserRequest.ts
next-ui/: package.json
next_ui/: package.json
scripts/: dynamodb_import.py  load.py
(+11 files in other folders)
